[tool.poetry]
name = "robot-simulation"
version = "0.1.0"
description = ""
authors = ["mlokos <mlokos.github@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gym = "^0.21.0"
mujoco-py = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
